--- a/Ampay_Grupo1.vcxproj.filters
+++ b/Ampay_Grupo1.vcxproj.filters
@@ -18,5 +18,8 @@
     <ClCompile Include="Ampay\Animation.cpp">
       <Filter>Archivos de origen</Filter>
     </ClCompile>
+    <ClCompile Include="rest\Source.cpp">
+      <Filter>Archivos de origen</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
