--- a/Ampay_Grupo1.vcxproj
+++ b/Ampay_Grupo1.vcxproj
@@ -22,6 +22,7 @@
     <ClCompile Include="Ampay\Animation.cpp" />
     <ClCompile Include="Ampay\Debugger.cpp" />
     <ClCompile Include="Ampay\Engine.cpp" />
+    <ClCompile Include="Ampay\Framebuffer.cpp" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
