--- a/Ampay_Grupo1.vcxproj
+++ b/Ampay_Grupo1.vcxproj
@@ -20,9 +20,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Ampay\Animation.cpp" />
-    <ClCompile Include="Ampay\Debugger.cpp" />
-    <ClCompile Include="Ampay\Engine.cpp" />
-    <ClCompile Include="Ampay\Framebuffer.cpp" />
+    <ClCompile Include="rest\Source.cpp" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
