--- a/Ampay_Grupo1.vcxproj
+++ b/Ampay_Grupo1.vcxproj
@@ -20,6 +20,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Ampay\Animation.cpp" />
+    <ClCompile Include="Ampay\Game.cpp" />
     <ClCompile Include="rest\Source.cpp" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
